@@ -1,8 +1,16 @@
 v3.9.0 (XXXX-XX-XX)
 -------------------
 
+* Fix a potential overwhelm situation on DB servers that can lead to no further
+  tasks being pulled from a DB servers queue even though there would still be
+  processing capacity and idle threads available.
+
 * Fixed ES-881: Fixed LDAP global options. This needs to use the first active
   provider, not just the first provider and it should be globally disabled.
+
+* Fix caching of collection counts and index selectivity estimates in cluster.
+  The cache values expired too early in previous versions, making the cache
+  ineffective.
 
 * Web UI: Fixes the loading of map tiles which are being used to display the
   query output based on a world map when using SSL encryption. This lead to not
